tests/negative/test_expr_deref_tuple.orb
fnc main () () {
    sym (x:i32 0) (y:i32 0);
    & (x y);
};